feat(ecosystem): integrate GitHub single-file delta fetcher, track mods and shaders, restore legacy pack icon, and fix CI matrix